# HorseKiller

./: .gitignore  CMakeLists.txt  TODO  configuration-sample.yaml  emp-sample.yaml  start.sh
cmake/Modules/: FindLibNL.cmake
include/: 80211Wrapper.h  AccessPointManager.hpp  Configuration.hpp  RegionConfiguration.hpp
src/: 80211Wrapper.cpp  CSA.cpp  deauth.cpp  emp.cpp  hackRegion.cpp
